2008-10-18  Tor Lillqvist  <tml@novell.com>

	* gdk/win32/gdkevents-win32.c (gdk_event_translate): On
	WM_WINDOWPOSCHANGING, don't dereference windowpos in the debugging
	output without setting it first.

2008-10-18  Tor Lillqvist  <tml@novell.com>

	Bug 556578 - GIMP windows stay on top of other windows

	* gdk/win32/gdkevents-win32.c (ensure_stacking_on_unminimize)
	(ensure_stacking_on_window_pos_changing)
	(ensure_stacking_on_activate_app): Ignore unmapped windows in the
	loops where we look for the lowest "transient-type" window.

	(gdk_event_translate): Don't call
	ensure_stacking_on_window_pos_changing() or
	ensure_stacking_on_activate_app() for unmapped windows.

2008-10-17  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

2008-10-16  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.14.4 ====
	
	* NEWS: Updates

2008-10-15  Michael Natterer  <mitch@imendio.com>

	Merged from trunk:

	* gdk/gdkapplaunchcontext.h (GDK_IS_APP_LAUNCH_CONTEXT): fix typo
	in the type name so the macro becomes usable.

2008-10-13  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

	Bug 555779 – GtkCellRendererPixbuf crashed on failed GIcon lookup

	* gtk/gtkcellrendererpixbuf
	(gtk_cell_renderer_pixbuf_create_themed_pixbuf): Don't crash
	if a GIcon is not present in the current theme. Patch by
	Alex Larsson.

2008-10-13  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

	Bug 552318 – menubar mnemonics consumed even when
	gtk-enable-mnemonics=false

	* gtk/gtkwindow.c (gtk_window_activate_key): Don't let mnemonic
	entries block accelerator activation when gtk-enable-mnemonics is
	FALSE. Problem reported by Andreas Moog.

2008-10-10  Simos Xenitellis  <simos@gnome.org>

	Merged from trunk:

	Bug 555000 – Wrong treatment on non-spacing marks dead keys in
	GtkIMContextSimple

	* gtk/gtkimcontextsimple.c: Change IS_DEAD_KEY() macro so that
	it only checks if input is a deadkey.

2008-10-09  Richard Hult  <richard@imendio.com>
